change body overflow-x

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <style>
 body {
+overflow-x: hidden;
 color: white;
 width: 100%;
 background: black url(https://pbs.twimg.com/media/F-S45XwbMAAJkKT?format=jpg&name=large) right bottom no-repeat;
