--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </html>
 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
+
 body {
 overflow-x: hidden;
 color: white;
@@ -44,7 +46,7 @@ margin: 5px 0 0px 20px;
 padding-top: 10px;
 }
 
-h1{font-size: 40px; font-weight: 900;}
+h1{font-size: 40px; font-weight: 900; font-family: 'Dela Gothic One';}
 h2{font-weight: 900;margin: -5px 0 0px 20px;}
 
 li {
