--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PKPC9</title>
     <link rel="icon" href="https://64.media.tumblr.com/ba5525edc2011450f1ab4e1c05ec435d/caef1a1795697a84-99/s75x75_c1/bd051b375501b771cf74e5333c8aea832aadcbe8.gif">
   </head>
   <body>
 <h1>PKPC9</h1>
-<h2>@pinkypaca</h2>
+<h2>pkpc9.github.io</h2>
 <ul>
 <li>my <a href=""> personal profile</a></li>
 <li>my <a href=""> spotify</a></li>
 <li>my <a href=""> twitter</a></li>
 <li>my <a href=""> favourites list</a></li>
 </ul>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0ngQSCRVUELspimIQ03Q9r?utm_source=generator&theme=0" width="280px" height="100" frameBorder="0" allowfullscreen="" allow="autoplay;" loading="lazy"></iframe>
-</body>
-</html>
-
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0ngQSCRVUELspimIQ03Q9r?utm_source=generator&amp;theme=0" width="280px" height="100" frameborder="0" allowfullscreen="" allow="autoplay;" loading="lazy"></iframe>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
+
+@media only screen and (max-width:820px) {
+li, h2 {
+font-size: 1.9rem;
+}
+}
 
 body {
 overflow-x: hidden;
@@ -46,10 +50,11 @@ margin: 5px 0 0px 20px;
 padding-top: 10px;
 }
 
-h1{font-size: 40px; font-weight: 900; font-family: 'Dela Gothic One';}
-h2{font-weight: 900;margin: -5px 0 0px 20px;}
+h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
+h2{font-weight: 400;margin: -5px 0 0px 20px; font-family: sans-serif; color: #555;}
 
 li {
+font-size: 25px;
 margin-bottom: -5px;
 text-indent: 0px;
 margin-left: 10px;
@@ -61,3 +66,5 @@ list-style-image:url(https://pix.crd.co/assets/images/gallery21/f6021301_origina
 }
 
 </style>
+</body>
+</html>
