--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ background-size: 300px;
 a{
 text-decoration: underline dashed .1px #333;
 text-underline-offset: 4px;
-color: gray;
+color: #ccc;
 font-weight: 700;
 }
 a:visited {
@@ -51,7 +51,7 @@ padding-top: 10px;
 }
 
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
-h2{font-weight: 400;margin: -5px 0 0px 20px; font-family: sans-serif; color: #555;}
+h2{font-weight: 400;margin: -5px 0 0px 20px; font-family: sans-serif; color: #888;}
 
 li {
 font-size: 25px;
