add iframe filter

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@ li:nth-child(even) {
 list-style-image:url(https://pix.crd.co/assets/images/gallery21/f6021301_original.png);
 }
 
+iframe{
+filter: grayscale(2);
+}
+
 </style>
 </body>
 </html>
