changed embed to yt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li>my <a href=""> twitter</a></li>
 <li>my <a href=""> favourites list</a></li>
 </ul>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2fmtrXfvbN8xkHwE0zgTTc?utm_source=generator&amp;theme=0" width="280px" height="100" frameborder="0" allowfullscreen="" allow="autoplay;" loading="lazy"></iframe>
+<iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?fs=0&amp;controls=0&amp;modestbranding=1" style="border-radius:12px"></iframe>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
@@ -69,6 +69,10 @@ iframe{
 filter: grayscale(2);
 }
 
+  :not(.ytp-mweb-player) .ytp-watermark {
+    width: 0;
+}
+  .ytp-hide-controls:not(.ytp-mweb-player) .ytp-watermark {visibility: hidden;}
 </style>
 </body>
 </html>
