--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <h1>PKPC9</h1>
 <h2>pkpc9.github.io</h2>
 <ul>
-<li>my <a href=""> personal profile</a></li>
-<li>my <a href=""> spotify</a></li>
-<li>my <a href=""> twitter</a></li>
-<li>my <a href=""> favourites list</a></li>
+<li><small>page</small> <a href="">momotalk relationship story  generator</a><hr></li>
+
+<li><small>gist</small> <a href="">bluearchive spine filenames</a></li>
+<li><small>gist</small> <a href="">where to find BA spine data</a></li>
+<li><small>gist</small> <a href="">ArisStudio tips<hr></a></li>
+
+<li><small>xtra</small> <a href="">about me<hr></a></li>
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?fs=0&amp;controls=0&amp;modestbranding=1" style="border-radius:12px"></iframe>
 <style>
@@ -33,15 +36,11 @@ filter: brightness(.9);
 background-size: 300px;
 }
 
-a{
+li a{
 text-decoration: underline dashed .1px #333;
 text-underline-offset: 4px;
-color: #ccc;
+color: #ddd;
 font-weight: 700;
-}
-a:visited {
-text-decoration-color: transparent;
-  color: #666;
 }
 
 h1, li, p, iframe{
@@ -51,14 +50,20 @@ padding-top: 10px;
 }
 
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
-h2{font-weight: 400;margin: -5px 0 0px 20px; font-family: sans-serif; color: #888;}
+h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888;}
 
 li {
-font-size: 25px;
+font-size: 23px;
 margin-bottom: -5px;
 text-indent: 0px;
 margin-left: 10px;
 list-style-image : url(https://gifcity.carrd.co/assets/images/gallery10/240f9f9b.gif);
+}
+
+li small{
+font-size: 20px;
+color: #666;
+
 }
 
 li:nth-child(even) {
@@ -67,6 +72,11 @@ list-style-image:url(https://pix.crd.co/assets/images/gallery21/f6021301_origina
 
 iframe{
 filter: grayscale(2);
+}
+
+hr{
+visibility: hidden;
+margin-bottom: 0px;
 }
 
   :not(.ytp-mweb-player) .ytp-watermark {
