--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <li><small>gist</small> <a href="">where to find BA spine data</a></li>
 <li><small>gist</small> <a href="">ArisStudio tips<hr></a></li>
 
-<li><small>xtra</small> <a href="">about me<hr></a></li>
+<li><small>xtra</small> <a href="https://pkpc9.github.io/about.html">about me<hr></a></li>
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?fs=0&amp;controls=0&amp;modestbranding=1" style="border-radius:12px"></iframe>
 <style>
