--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <h1>PKPC9</h1>
 <h2>pkpc9.github.io</h2>
 <ul>
-<li><small>page</small> <a href="">momotalk relationship story  generator</a><hr></li>
+<li><small>page</small> <a href="https://pkpc9.github.io/relationshipstory/">momotalk relationship story page (wip)</a><hr></li>
 
-<li><small>gist</small> <a href="">bluearchive spine filenames</a></li>
-<li><small>gist</small> <a href="">where to find BA spine data</a></li>
-<li><small>gist</small> <a href="">ArisStudio tips<hr></a></li>
+<li><small>gist</small> <a href="https://gist.github.com/pkpc9/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
+<li><small>gist</small> <a href="https://gist.github.com/pkpc9/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
+<li><small>gist</small> <a href="https://gist.github.com/pkpc9/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 
 <li><small>xtra</small> <a href="https://pkpc9.github.io/about">about me<hr></a></li>
 </ul>
