change username links

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PKPC9</title>
+    <title>pkpc99</title>
     <link rel="icon" href="https://64.media.tumblr.com/ba5525edc2011450f1ab4e1c05ec435d/caef1a1795697a84-99/s75x75_c1/bd051b375501b771cf74e5333c8aea832aadcbe8.gif">
   </head>
   <body>
-<h1>PKPC9</h1>
-<h2>pkpc9.github.io</h2>
+<h1>pkpc99</h1>
+<h2>pkpc99.github.io</h2>
 <H3>about me</H3>
 <ul>
 <li>canadian, EST time (GMT-5)</li>
