--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>pkpc99</title>
+    <title>PKPC99</title>
     <link rel="icon" href="https://64.media.tumblr.com/ba5525edc2011450f1ab4e1c05ec435d/caef1a1795697a84-99/s75x75_c1/bd051b375501b771cf74e5333c8aea832aadcbe8.gif">
   </head>
   <body>
-<h1>pkpc99</h1>
+<h1>PKPC99</h1>
 <h2>pkpc99.github.io</h2>
 <ul>
 <li><small>page</small> <a href="https://pkpc99.github.io/relationshipstory/">momotalk relationship story page (wip)</a><hr></li>
