--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=.85">
@@ -7,21 +8,25 @@
   <body>
 <h1>PKPC99</h1>
 <h2>pkpc99.github.io</h2>
+
+<H3>pages</H3>
 <ul>
-<li><small>page</small> <a href="https://pkpc99.github.io/relationshipstory/">momotalk relationship story page (wip)</a><hr></li>
+<li><a href="https://pkpc99.github.io/relationshipstory/">momotalk relationship story page (wip)</a></li>
+<li><a href="https://pkpc99.github.io/about">about me</a></li>
+</ul>
 
-<li><small>gist</small> <a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
-<li><small>gist</small> <a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
-<li><small>gist</small> <a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
-
-<li><small>xtra</small> <a href="https://pkpc99.github.io/about">about me<hr></a></li>
+<h3>gists</h3>
+<ul>
+<li><a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
+<li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
+<li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?fs=0&amp;controls=0&amp;modestbranding=1" style="border-radius:12px"></iframe>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
 @media only screen and (max-width:820px) {
-li, h2 {
+li, h2, {
 font-size: 1.9rem;
 }
 }
@@ -39,7 +44,7 @@ background-size: 300px;
 li a{
 text-decoration: underline dashed .1px #333;
 text-underline-offset: 4px;
-color: #ddd;
+color: #ccc;
 font-weight: 700;
 }
 
@@ -51,6 +56,7 @@ padding-top: 10px;
 
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
 h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888;}
+h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
 
 li {
 font-size: 23px;
