--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ color: white;
 width: 100%;
 background: black url(https://pbs.twimg.com/media/F-S45XwbMAAJkKT?format=jpg&name=large) right bottom no-repeat;
 background-blend-mode: luminosity;
+background-attachment: fixed;
 filter: brightness(.9);
 background-size: 300px;
 }
