--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ margin: 5px 0 0px 20px;
 padding-top: 10px;
 }
 
-h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
-h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888;}
+h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: sticky; top: inherit; background: black;}
+h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
 h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
 
 li {
