--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <li>canadian, EST time (GMT-5)</li>
 <li>online but never active</li>
 <li>learning to draw, code and write better</li>
-
+<li>more about my interests <a href="likes">here</a></li>
 </ul>
 
 <style>
@@ -59,6 +59,13 @@ li small{
 font-size: 20px;
 color: #666;
 
+}
+
+li a{
+text-decoration: underline dashed .1px #333;
+text-underline-offset: 4px;
+color: #ccc;
+font-weight: 700;
 }
 
 li:nth-child(even) {
