--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@ margin: 5px 0 0px 20px;
 padding-top: 10px;
 }
 
-h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One';}
-h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888;}
+h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: sticky; top: 0px; background: black;}
+h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
 h3{font-weight: 600;margin: 20px 0 -20px 20px; font-family: sans-serif; color: #ddd; font-size: 1.9em;}
 
 li {
