--- a/likes.html
+++ b/likes.html
@@ -1,19 +1,40 @@
-<html>
+<html style="overflow-x: hidden;">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=.85">
     <title>PKPC99</title>
-    <link rel="icon" href="https://64.media.tumblr.com/ba5525edc2011450f1ab4e1c05ec435d/caef1a1795697a84-99/s75x75_c1/bd051b375501b771cf74e5333c8aea832aadcbe8.gif">
+    <link rel="icon" href="https://pixels.crd.co/assets/images/gallery14/680355e0.gif">
   </head>
   <body>
 <div class="aaa">
 <div class="img"></div>
 <h1>interests</h1>
 
+<h2>media</h2>
 <ul>
-<li>work in progress...</li>
-<li>check back later!</li>
-<li><i><a href="https://pkpc99.github.io">homepage</a></i></li>
+ <li>sonic</li>
+ <li>muse dash </li>
+<li>blue archive</li>
+<li>lego monkie kid</li>
+<li>itemlabel</li>
+<li>wario </li>
+<li>princess connect</li>
+<li>splatoon</li>
+<li>super milk-chan</li><br>
+</ul>
 
+<h2>hobbies</h2>
+<ul>
+ <li>drawing</li>
+ <li>writing short stories </li>
+ <li>writing amateur code </li>
+ <li>reading </li>
+ <li>gaming (poorly) </li>
+
+
+</ul>
+
+<ul>
+<li><i><a href="https://pkpc99.github.io">homepage</a></i></li>
 </ul>
 
 </div>
@@ -39,14 +60,29 @@ margin-top: 0;
 margin-bottom: -10px;
 }
 
+h2 {
+text-indent: 3px;
+color: #ffca7f;
+font-family: Shippori Antique B1;
+transform-origin: top left;
+transform: scaleX(130%);
+letter-spacing: -1px;
+font-size: 40px;
+margin-top: 0;
+margin-bottom: -10px;
+}
+
 .img{
 background: url(https://proxy.everskies.com/a/http://dl7.glitter-graphics.net/pub/1330/1330847kvtf9k99np.gif) center/150px no-repeat;
 width: 150px;
 height: 150px;
-position: absolute;
+position: fixed;
 filter: brightness(110%) sepia(60%);
 bottom: 5px;
 right: 5px;
+background-position: bottom right;
+background-attachment: fixed;
+z-index: -3;
 }
 
 li {
