added some interests

--- a/likes.html
+++ b/likes.html
@@ -17,6 +17,7 @@
 <li>lego monkie kid</li>
 <li>itemlabel</li>
 <li>wario </li>
+<li>monkey ball</li>
 <li>princess connect</li>
 <li>splatoon</li>
 <li>super milk-chan</li><br>
@@ -29,7 +30,8 @@
  <li>writing amateur code </li>
  <li>reading </li>
  <li>gaming (poorly) </li>
-
+<li> cooking (occassionally)</li>
+<li>designing profiles on everskies</li>
 
 </ul>
 
