--- a/likes.html
+++ b/likes.html
@@ -1,3 +1,4 @@
+
 <html style="overflow-x: hidden;">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=.85">
@@ -5,18 +6,17 @@
     <link rel="icon" href="https://pixels.crd.co/assets/images/gallery14/680355e0.gif">
   </head>
   <body>
-<div class="aaa">
 <div class="img"></div>
 <h1>interests</h1>
-
+<b>bold</b> = big fan right now
 <h2>media</h2>
 <ul>
- <li>sonic</li>
- <li>muse dash </li>
-<li>blue archive</li>
+ <li><b>sonic</b></li>
+ <li><b>muse dash</b></li>
+<li><b>blue archive</b></li>
 <li>lego monkie kid</li>
 <li>itemlabel</li>
-<li>wario </li>
+<li><b>wario</b></li>
 <li>monkey ball</li>
 <li>princess connect</li>
 <li>splatoon</li>
@@ -25,11 +25,11 @@
 
 <h2>hobbies</h2>
 <ul>
- <li>drawing</li>
- <li>writing short stories </li>
- <li>writing amateur code </li>
+ <li><b>drawing</b></li>
+ <li><b>writing short stories</b> </li>
+ <li><b>writing amateur code</b></li>
  <li>reading </li>
- <li>gaming (poorly) </li>
+ <li><b>gaming (poorly)</b></li>
 <li> cooking (occassionally)</li>
 <li>designing profiles on everskies</li>
 
@@ -39,12 +39,13 @@
 <li><i><a href="https://pkpc99.github.io">homepage</a></i></li>
 </ul>
 
-</div>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Shippori Antique B1&display=swap');
  body {
+font-family: Shippori Antique B1;
 overflow-x: hidden;
-color: white;
+color: #b6917f;
+font-size: 22px;
 width: 100%;
 background: #ffff99 url(https://proxy.everskies.com/a/https://i.ibb.co/0QbwRJx/yello043.jpg) repeat;
 background-attachment: fixed;
@@ -52,7 +53,6 @@ background-attachment: fixed;
 
 h1{
 color: #ffca7f;
-font-family: Shippori Antique B1;
 transform-origin: top left;
 transform: scaleX(130%);
 letter-spacing: -1px;
