edit iframe to work a little better

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
 <li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 </ul>
-<iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?fs=0&amp;controls=0&amp;modestbranding=1" style="border-radius:12px"></iframe>
-<style>
+<iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?controls=0&showinfo=0&loop=1" style="border-radius:12px;"></iframe>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
 @media only screen and (max-width:820px) {
