--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?controls=0&showinfo=0&loop=1" style="border-radius:12px;"></iframe>
+  <body>
+<html>
+    
+<style>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
 @media only screen and (max-width:820px) {
