Update likes.html, sort alphabetically

--- a/likes.html
+++ b/likes.html
@@ -11,16 +11,19 @@
 <b>bold</b> = big fan right now
 <h2>media</h2>
 <ul>
- <li><b>sonic</b></li>
- <li><b>muse dash</b></li>
-<li><b>blue archive</b></li>
-<li>lego monkie kid</li>
+ <li><b>blue archive</b></li>
 <li>itemlabel</li>
-<li><b>wario</b></li>
+<li>lego monkie kid</li>
 <li>monkey ball</li>
-<li>princess connect</li>
+<li><b>muse dash</b></li>
+<li><b>pizza tower</b></li>
+<li>princess connect</b></li>
+<li><b>sonic</b></li>
 <li>splatoon</li>
-<li>super milk-chan</li><br>
+<li><b>sugary spire</b></li>
+<li>super milk-chan</li>
+<li><b>wario</b></li>
+  <br>
 </ul>
 
 <h2>hobbies</h2>
