--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <h3>gists</h3>
 <ul>
 <li><a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
+ <h4>1/30/24 - added dress Ako, dress Hina, dress Ibuki, dress Makoto, Chiaki</h4>
 <li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
 <li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 </ul>
@@ -61,7 +62,8 @@ padding-top: 10px;
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: sticky; top: 0px; background: black;}
 h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
 h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
-
+h4 {font-weight: 400;margin: 10px 0px -10px 10px;font-family: sans-serif;color: #888;}
+  
 li {
 font-size: 23px;
 margin-bottom: -5px;
