--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +20,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
 @media only screen and (max-width:820px) {
-li, h2 {
+li, h2, {
 font-size: 1.9rem;
 }
 }
@@ -30,6 +31,7 @@ color: white;
 width: 100%;
 background: black url(https://pbs.twimg.com/media/F-S45XwbMAAJkKT?format=jpg&name=large) right bottom no-repeat;
 background-blend-mode: luminosity;
+background-attachment: fixed;
 filter: brightness(.9);
 background-size: 300px;
 }
@@ -41,9 +43,16 @@ margin: 5px 0 0px 20px;
 padding-top: 10px;
 }
 
+h1, li, p, iframe{
+font-family: sans-serif;
+margin: 5px 0 0px 20px;
+padding-top: 10px;
+}
+
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: sticky; top: 0px; background: black;}
 h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
-h3{font-weight: 600;margin: 20px 0 -20px 20px; font-family: sans-serif; color: #ddd; font-size: 1.9em;}
+h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
+h4 {font-weight: 400;margin: 10px 0px -10px 10px;font-family: sans-serif;color: #888;}
 
 li {
 font-size: 23px;
