--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h3>gists</h3>
 <ul>
 <li><a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
- <h4>2/7/24 - added Yume and past Hoshino </h4>
+ <h4>2/21/24 - added Problem Solver 68 dress/suit alts </h4>
 <li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
 <li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
 </ul>
