added SV-GAMES to pages list

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <ul>
 <li><a href="https://pkpc99.github.io/relationshipstory/">momotalk relationship story page (wip)</a></li>
 <li><a href="https://pkpc99.github.io/about">about me</a></li>
+<li><a href="https://pkpc99.github.io/sz-games">SZ Games</a></li> <h4 style="display: inline">original repo <a href="https://github.com/sz-games/sz-games.github.io"> here</a></h4>
 </ul>
 
 <h3>gists</h3>
@@ -63,6 +64,7 @@ h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: 
 h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
 h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
 h4 {font-weight: 400;margin: 10px 0px -10px 10px;font-family: sans-serif;color: #888;}
+h4 a {font-weight: 400; text-decoration: underline dashed; text-underline-offset: 2px; font-family: sans-serif;color: #888;}
   
 li {
 font-size: 23px;
@@ -75,7 +77,6 @@ list-style-image : url(https://gifcity.carrd.co/assets/images/gallery10/240f9f9b
 li small{
 font-size: 20px;
 color: #666;
-
 }
 
 li:nth-child(even) {
@@ -91,7 +92,7 @@ visibility: hidden;
 margin-bottom: 0px;
 }
 
-  :not(.ytp-mweb-player) .ytp-watermark {
+:not(.ytp-mweb-player) .ytp-watermark {
     width: 0;
 }
   .ytp-hide-controls:not(.ytp-mweb-player) .ytp-watermark {visibility: hidden;}
