add SCM player TEST

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 <li>more about my interests <a href="likes">here</a></li>
 </ul>
 
+    <!--->
 <H4>here are some songs i like ....judge my music taste</H4>
 <br>
 <div class="music">
@@ -26,7 +27,8 @@
 <iframe class="song1" src="https://bandcamp.com/EmbeddedPlayer/track=2502843563/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=large/transparent=true/"></iframe>
 <iframe class="song1" src="https://bandcamp.com/EmbeddedPlayer/track=3434289083/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=large/transparent=true/"></iframe>
 </div>
-
+<!--->
+    
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 
@@ -127,5 +129,12 @@ border: none;
 outline: none;
 }
 </style>
+
+<!-- SCM Music Player https://www.scmplayer.net -->
+<!-- this is a test, i'll remove it if it doesn't work -->
+<script type="text/javascript" src="https://www.scmplayer.net/script.js" 
+data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':true,'repeat':0,'placement':'top','showplaylist':false,'playlist':[{'title':'wii party theme','url':'https://www.youtube.com/watch?v=fzepGtfHL9A'},{'title':'shop','url':'https://www.youtube.com/watch?v=zNHC_efucwo'},{'title':'leave it alone','url':'https://www.youtube.com/watch?v=lKQG8JwmDvI'},{'title':'nu slumber','url':'https://www.youtube.com/watch?v=VcC9WyFlj4A'},{'title':'citrus!','url':'https://www.youtube.com/watch?v=kWe23jfqNZo'},{'title':'going back','url':'https://www.youtube.com/watch?v=e3pOxD-iHiU'}]}" ></script>
+<!-- SCM Music Player script end -->
+
 </body>
 </html>
