--- a/likes.html
+++ b/likes.html
@@ -17,7 +17,8 @@
 <li>monkey ball</li>
 <li><b>muse dash</b></li>
 <li><b>pizza tower</b></li>
-<li>princess connect</b></li>
+<li>princess connect</li>
+<li>roblox</li>
 <li><b>sonic</b></li>
 <li>splatoon</li>
 <li><b>sugary spire</b></li>
