--- a/likes.html
+++ b/likes.html
@@ -18,23 +18,24 @@
 <li><b>muse dash</b></li>
 <li><b>pizza tower</b></li>
 <li>princess connect</li>
-<li>roblox</li>
+<li><b>ribbit king</b></li>
+<li><b>roblox</b></li>
 <li><b>sonic</b></li>
 <li>splatoon</li>
 <li><b>sugary spire</b></li>
 <li>super milk-chan</li>
-<li><b>wario</b></li>
+<li>wario</li>
   <br>
 </ul>
 
 <h2>hobbies</h2>
 <ul>
- <li><b>drawing</b></li>
- <li><b>writing short stories</b> </li>
- <li><b>writing amateur code</b></li>
- <li>reading </li>
- <li><b>gaming (poorly)</b></li>
-<li> cooking (occassionally)</li>
+ <li>drawing</li>
+ <li>writing short stories</li>
+ <li>writing amateur code</li>
+ <li>reading</li>
+ <li>gaming (poorly)</li>
+<li>cooking (occassionally)</li>
 <li>designing profiles on everskies</li>
 
 </ul>
