--- a/likes.html
+++ b/likes.html
@@ -52,7 +52,7 @@ overflow-x: hidden;
 color: #b6917f;
 font-size: 22px;
 width: 100%;
-background: #ffff99 url(https://proxy.everskies.com/a/https://i.ibb.co/0QbwRJx/yello043.jpg) repeat;
+background: #ffff99 url(https://i.ibb.co/0QbwRJx/yello043.jpg) repeat;
 background-attachment: fixed;
 }
 
@@ -80,7 +80,7 @@ margin-bottom: -10px;
 }
 
 .img{
-background: url(https://proxy.everskies.com/a/http://dl7.glitter-graphics.net/pub/1330/1330847kvtf9k99np.gif) center/150px no-repeat;
+background: url(http://dl7.glitter-graphics.net/pub/1330/1330847kvtf9k99np.gif) center/150px no-repeat;
 width: 150px;
 height: 150px;
 position: fixed;
