fix dead links for list style image

--- a/likes.html
+++ b/likes.html
@@ -94,7 +94,7 @@ z-index: -3;
 
 li {
 font-size: 30px;
-list-style-image : url(https://mikejima.crd.co/assets/images/shadow/e8948269.gif);
+list-style-image : url(https://iili.io/Jr6gqkN.gif);
 text-decoration: none;
 color: #b6917f;
 }
@@ -112,11 +112,11 @@ font-weight: 700;
 }
 
 li:nth-child(even) {
-list-style-image:url(https://xyz.crd.co/assets/images/gallery05/117eeeb7.gif?v=4ca63763);
+list-style-image:url(https://xyz.crd.co/assets/images/gallery05/117eeeb7.gif);
 }
 
 li:nth-child(3n) {
-list-style-image:url(https://pix.crd.co/assets/images/gallery07/26042e27.gif?v=ca70c28c);
+list-style-image:url(https://iili.io/JrPgfHl.gif);
 }
 
 </style>
