replace favicon host

--- a/likes.html
+++ b/likes.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=.85">
     <title>PKPC99</title>
-    <link rel="icon" href="https://pixels.crd.co/assets/images/gallery14/680355e0.gif">
+    <link rel="icon" href="https://iili.io/J4RcEan.gif">
   </head>
 
   <body>
