--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <li><a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
  <h4>2/21/24 - added Problem Solver 68 dress/suit alts </h4>
 <li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
-<li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">blue archive story resources<hr></a></li>
+<li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">bluearchive story resources</a></li>
+  <li><a href="https://gist.github.com/pkpc99/2c3c3632b968b6ab6d1b7a376a735f70">bluearchive lesson flavour text<hr></a></li>
+
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?controls=0&showinfo=0&loop=1" style="border-radius:12px;"></iframe>
   <body>
