--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3>gists</h3>
 <ul>
 <li><a href="https://gist.github.com/pkpc99/5786820b588cf026757d44e57c991e4f">bluearchive spine filenames</a></li>
- <h4>2/21/24 - added Problem Solver 68 dress/suit alts </h4>
+ <h4>6/28/24 - added Valkyrie swimsuit alts, Konoka, Rabu swimsuit, Nonomi & Suou alts from main story</h4>
 <li><a href="https://gist.github.com/pkpc99/961645891a3b6d229c8d44ad8258d444">where to find spine2D data</a></li>
 <li><a href="https://gist.github.com/pkpc99/32f28cadff44bfe862594966a01c0e31">bluearchive story resources</a></li>
   <li><a href="https://gist.github.com/pkpc99/2c3c3632b968b6ab6d1b7a376a735f70">bluearchive lesson flavour text<hr></a></li>
