added mood indicator

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=.85">
@@ -26,7 +27,10 @@
 
 </ul>
 <iframe frameborder="0" height="200" width="280px" src="https://www.youtube.com/embed/4tcWt8JWjtw?controls=0&showinfo=0&loop=1" style="border-radius:12px;"></iframe>
-  <body>
+<br>
+
+<p class="pixel"> feeling pretty <img class="pixelpic" src="https://moods.imood.com/display/uname-PKPC/fg-ffffff/trans-1/imood.gif" alt="The current mood of PKPC99 at www.imood.com" border="0"></img> rn</p>
+<body>
 <html>
     
 <style>
@@ -63,7 +67,7 @@ padding-top: 10px;
 }
 
 h1{font-size: 70px; font-weight: 300; font-family: 'Dela Gothic One'; position: sticky; top: 0px; background: black;}
-h2{font-weight: 400;margin: -20px 0 -10px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
+h2{font-weight: 400;margin: -20px 0 -20px 20px; font-family: sans-serif; color: #888; position: sticky; top: 93px; background: black; padding-bottom: 10px;}
 h3{font-size: 30px; font-weight: 200; font-family: 'Dela Gothic One'; margin: 20px 0 -15px 20px; color: #e5e5e5}
 h4 {font-weight: 400;margin: 10px 0px -10px 10px;font-family: sans-serif;color: #888;}
 h4 a {font-weight: 400; text-decoration: underline dashed; text-underline-offset: 2px; font-family: sans-serif;color: #888;}
@@ -89,10 +93,18 @@ iframe{
 filter: grayscale(2);
 }
 
+.pixel{font-family: ms gothic;background: black; padding: 5px; font-size: 15px; letter-spacing: -.8px; width:max-content; filter: grayscale(10)!important;}
+.pixelpic {
+width: 50px;
+margin-top: -10;
+vertical-align: bottom;
+}
+
 hr{
 visibility: hidden;
 margin-bottom: 0px;
 }
+
 
 :not(.ytp-mweb-player) .ytp-watermark {
     width: 0;
