made error fixed error

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     color: #aaa;
     padding: 0;
     font-family: arial;
-    margin-bottom: -20px;
-">This site will undergo a redesign in the coming months.<br>This layout will still be available after then at "pkpc99.github.io/old".</p>
+    margin: 20px;
+margin-bottom: -20px;">This site will undergo a redesign in the coming months.<br>This layout will still be available after then at "pkpc99.github.io/old".</p>
 <H3>pages</H3>
 <ul>
 <li><a href="https://pkpc99.github.io/relationshipstory/">momotalk relationship story page (wip)</a></li>
