--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <title>PKPC99</title>
     <link rel="icon" href="https://64.media.tumblr.com/ba5525edc2011450f1ab4e1c05ec435d/caef1a1795697a84-99/s75x75_c1/bd051b375501b771cf74e5333c8aea832aadcbe8.gif">
   </head>
-<body>
-temp
-</body>
 
+<body>
+<img src=https://iili.io/3nzNSON.gif>
+<br>
+<b>i'm working on it!!!</b>
+<br>
+<small>ETA: April/May 2025 probably
+
+<style>
+html{
+display: flex;
+justify-content: center;
+align-items: center;
+text-align:center;
+height:100%;
+font: 20px sans-serif;
+color:black;
+}
+</style>
 </html>
