--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br>
 <b>i'm working on it!!!</b>
 <br>
-<small>ETA: April/May 2025 probably
+<s><small>ETA: April/May 2025 probably</small></s><br>IDK. if i dont finish this before december you are free to throw tomatoes at me 
 
 <style>
 html{
